{
  "version": 4,
  "terraform_version": "0.12.16",
  "serial": 567,
  "lineage": "caf3fa8a-7ed6-f56a-3a8f-a180d7b0b798",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "elbwildfly",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:880524688489:loadbalancer/elbwildfly",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "elbwildfly-512295866.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:8080",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "elbwildfly",
            "idle_timeout": 400,
            "instances": [
              "i-010ed9ce66d669e98",
              "i-0da9067fbbb363f08"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 8080,
                "lb_protocol": "http"
              }
            ],
            "name": "elbwildfly",
            "security_groups": [
              "sg-00d4a25eea8696c29"
            ],
            "source_security_group": "880524688489/default",
            "source_security_group_id": "sg-00d4a25eea8696c29",
            "subnets": [
              "subnet-002b06f4b429badae",
              "subnet-067c81347d6bdbd14"
            ],
            "tags": {
              "Name": "ELB-Wildfly"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.Wildfly",
            "aws_instance.Wildfly1",
            "aws_security_group.sgwildfly",
            "aws_subnet.subnet-2",
            "aws_subnet.subnet-4",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "elbwordpress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:880524688489:loadbalancer/elbwordpress",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "elbwordpress-609762864.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "elbwordpress",
            "idle_timeout": 400,
            "instances": [
              "i-064fd46810ae6ab58",
              "i-0e0da0fa7e92286e4"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "elbwordpress",
            "security_groups": [
              "sg-00d4a25eea8696c29"
            ],
            "source_security_group": "880524688489/default",
            "source_security_group_id": "sg-00d4a25eea8696c29",
            "subnets": [
              "subnet-0650ab0221e9d4895",
              "subnet-0dbba3c9f60fc7d6b"
            ],
            "tags": {
              "Name": "ELB-Wordpress"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.WordPress",
            "aws_instance.WordPress1",
            "aws_security_group.sgwordpress",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-3",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Wildfly",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dfc7c30c35ba4beb",
            "arn": "arn:aws:ec2:us-east-1:880524688489:instance/i-0da9067fbbb363f08",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0da9067fbbb363f08",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0d65e905b10f06412",
            "private_dns": "ip-192-168-0-58.ec2.internal",
            "private_ip": "192.168.0.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00ca131bbd0915f85",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d308f9d9171b881c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-067c81347d6bdbd14",
            "tags": {
              "Name": "wildfly"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d308f9d9171b881c"
            ]
          },
          "dependencies": [
            "aws_security_group.sgwildfly",
            "aws_subnet.subnet-2",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Wildfly1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dfc7c30c35ba4beb",
            "arn": "arn:aws:ec2:us-east-1:880524688489:instance/i-010ed9ce66d669e98",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-010ed9ce66d669e98",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-043b52e5fb557df6d",
            "private_dns": "ip-192-168-0-106.ec2.internal",
            "private_ip": "192.168.0.106",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04d6a1904a4a4f170",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d308f9d9171b881c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-002b06f4b429badae",
            "tags": {
              "Name": "Widfly1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d308f9d9171b881c"
            ]
          },
          "dependencies": [
            "aws_security_group.sgwildfly",
            "aws_subnet.subnet-4",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "WordPress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0026526a4fe72c3a2",
            "arn": "arn:aws:ec2:us-east-1:880524688489:instance/i-064fd46810ae6ab58",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-064fd46810ae6ab58",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-09e9b947266a3fd8d",
            "private_dns": "ip-192-168-0-21.ec2.internal",
            "private_ip": "192.168.0.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0aed227014fa5511a",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-066f8a103ac4b9ea9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0650ab0221e9d4895",
            "tags": {
              "Name": "Wordpress"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-066f8a103ac4b9ea9"
            ]
          },
          "dependencies": [
            "aws_security_group.sgwordpress",
            "aws_subnet.subnet-1",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "WordPress1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0026526a4fe72c3a2",
            "arn": "arn:aws:ec2:us-east-1:880524688489:instance/i-0e0da0fa7e92286e4",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0e0da0fa7e92286e4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0df78ba254cabe8f5",
            "private_dns": "ip-192-168-0-78.ec2.internal",
            "private_ip": "192.168.0.78",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08de644d3ac67dc16",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-066f8a103ac4b9ea9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dbba3c9f60fc7d6b",
            "tags": {
              "Name": "Wordpress1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-066f8a103ac4b9ea9"
            ]
          },
          "dependencies": [
            "aws_security_group.sgwordpress",
            "aws_subnet.subnet-3",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0194283d9905fd73a",
            "owner_id": "880524688489",
            "tags": {
              "Name": "Internet-gateway-reto"
            },
            "vpc_id": "vpc-058ea8459af9d0196"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "webPublic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0bbb7500faf4dfe9c",
            "owner_id": "880524688489",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0194283d9905fd73a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route-Public"
            },
            "vpc_id": "vpc-058ea8459af9d0196"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "webPublica",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01218da74555daa04",
            "route_table_id": "rtb-0bbb7500faf4dfe9c",
            "subnet_id": "subnet-0650ab0221e9d4895"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.webPublic",
            "aws_subnet.subnet-1",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgrds",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880524688489:security-group/sg-06515f35bfbcecdff",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "192.168.0.32/27",
                  "192.168.0.96/27"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-06515f35bfbcecdff",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.32/27",
                  "192.168.0.96/27"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sgrds",
            "name_prefix": null,
            "owner_id": "880524688489",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-058ea8459af9d0196"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgwildfly",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880524688489:security-group/sg-0d308f9d9171b881c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "192.168.0.32/27",
                  "192.168.0.96/27"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0d308f9d9171b881c",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/27",
                  "192.168.0.64/27"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "wildfly",
            "name_prefix": null,
            "owner_id": "880524688489",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-058ea8459af9d0196"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgwordpress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880524688489:security-group/sg-066f8a103ac4b9ea9",
            "description": "public",
            "egress": [
              {
                "cidr_blocks": [
                  "192.168.0.32/27",
                  "192.168.0.96/27"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-066f8a103ac4b9ea9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wordpress",
            "name_prefix": null,
            "owner_id": "880524688489",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-058ea8459af9d0196"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880524688489:subnet/subnet-0650ab0221e9d4895",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.0.0/27",
            "id": "subnet-0650ab0221e9d4895",
            "map_public_ip_on_launch": false,
            "owner_id": "880524688489",
            "tags": {
              "Name": "Subnet-Publica"
            },
            "vpc_id": "vpc-058ea8459af9d0196"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880524688489:subnet/subnet-067c81347d6bdbd14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.0.32/27",
            "id": "subnet-067c81347d6bdbd14",
            "map_public_ip_on_launch": false,
            "owner_id": "880524688489",
            "tags": {
              "Name": "Subnet-Privada"
            },
            "vpc_id": "vpc-058ea8459af9d0196"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880524688489:subnet/subnet-0dbba3c9f60fc7d6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.0.64/27",
            "id": "subnet-0dbba3c9f60fc7d6b",
            "map_public_ip_on_launch": false,
            "owner_id": "880524688489",
            "tags": {
              "Name": "Subnet-Publica"
            },
            "vpc_id": "vpc-058ea8459af9d0196"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-4",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880524688489:subnet/subnet-002b06f4b429badae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.0.96/27",
            "id": "subnet-002b06f4b429badae",
            "map_public_ip_on_launch": false,
            "owner_id": "880524688489",
            "tags": {
              "Name": "Subnet-Privada"
            },
            "vpc_id": "vpc-058ea8459af9d0196"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-5",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880524688489:subnet/subnet-0409acefd705f1f68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.0.128/27",
            "id": "subnet-0409acefd705f1f68",
            "map_public_ip_on_launch": false,
            "owner_id": "880524688489",
            "tags": {
              "Name": "Subnet-Privada"
            },
            "vpc_id": "vpc-058ea8459af9d0196"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-6",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880524688489:subnet/subnet-06ffdbd3712527b43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.0.160/27",
            "id": "subnet-06ffdbd3712527b43",
            "map_public_ip_on_launch": false,
            "owner_id": "880524688489",
            "tags": {
              "Name": "Subnet-Privada"
            },
            "vpc_id": "vpc-058ea8459af9d0196"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880524688489:vpc/vpc-058ea8459af9d0196",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-06fb46e63e61329b3",
            "default_route_table_id": "rtb-0c6a83d14995a87ba",
            "default_security_group_id": "sg-00d4a25eea8696c29",
            "dhcp_options_id": "dopt-03ed43e285bd43776",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-058ea8459af9d0196",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c6a83d14995a87ba",
            "owner_id": "880524688489",
            "tags": {
              "Name": "VPC-Reto"
            }
          }
        }
      ]
    }
  ]
}